A follow-up to r22601, providing compatibility with older JDK versions.
* subversion/libsvn_client/client.h
  (DiffSummary.DiffKind.hashCode): Return member variable "kind"
   directly as the hash code, which is the equivalent of
   Integer.hashCode().

Suggested by: markphip


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@862781 13f79535-47bb-0310-9956-ffa450edef68